blocks/feature/feature.css
/* ... */
/* Tablet Design */
@media (width >=768px) and (width < 1181px) {
  .feature-wrapper .with-vertical-list .about-us-stats {
    gap: 40px;
    flex-direction: column;
  }

  .feature-wrapper .with-vertical-list .about-us-right-column {
    padding-top: 0;
  }

  .feature-wrapper .with-vertical-list .about-us-left .about-us-left-title {
    font-size: 32px;
    line-height: 48px;
  }

  .feature-wrapper .with-vertical-list .about-us-stats .about-us-right-content {
    padding: 16px 0;
  }

  .feature-wrapper .with-vertical-list .about-us-stats .about-us-right-content:not(:has(~ .about-us-right-content)) {
    padding-bottom: 0;
  }

  .feature-wrapper .with-vertical-list .about-us-stats .about-us-right-content>div p {
    font-size: 24px;
    line-height: 40px;
  }
}

/* Mobile Design */
@media (width < 768px) {
  .feature-wrapper .with-vertical-list .about-us-stats {
    flex-direction: column;
    gap: 24px;
  }

  .feature-wrapper .with-vertical-list .about-us-stats .about-us-right {
    gap: 0;
  }

  .feature-wrapper .with-vertical-list .about-us-right-column {
    padding-top: 0;
  }

  .feature-wrapper .with-vertical-list .about-us-left .about-us-left-title {
    font-size: 24px;
    line-height: 40px;
  }

  .feature-wrapper .with-vertical-list .about-us-stats .about-us-right-content {
    padding: 16px 0;
  }

  .feature-wrapper .with-vertical-list .about-us-stats .about-us-right-content:not(:has(~ .about-us-right-content)) {
    padding-bottom: 0;
    border-bottom: none;
  }

  .feature-wrapper .with-vertical-list .about-us-stats .about-us-right-content>div p {
    font-size: 16px;
    line-height: 24px;
  }
}





/* Desktop Design */


@media (width > 1181px) {
  .feature-wrapper .with-vertical-list .about-us-stats .about-us-right-content>div p {
    font-size: 24px;
    line-height: 40px;
    color: var(--color-text-tertiary, #8d713e);
  }

  .feature-wrapper .is-inside-tab .about-us-stats .about-us-right-content>div p {
    font-size: 16px;
    line-height: 24px;
  }

  .feature-wrapper .is-inside-tab .about-us-stats .about-us-right-content>div p strong {
    font-size: 24px;
    line-height: 40px;
  }

}

